@@ -31,7 +31,7 @@
                 </tr>
                 <tr>
                     <td><i class="ps-5 bi bi-file-richtext"></i> Wiki</td>
-                    <td><a class="ps-3" href="https://wiki.openstreamingplatform.com">wiki.openstreamingplatform.com</a></td>
+                    <td><a class="ps-3" href="https://open-streaming-platform.readthedocs.io/">open-streaming-platform.readthedocs.io</a></td>
                 </tr>
                 <tr>
                   <td><i class="ps-5 bi bi-reddit"></i> Reddit</td>
