@@ -131,7 +131,7 @@
             {% endif %}
             <a class="dropdown-item" href="/settings/user/subscriptions"><i class="fas fa-star"></i> Subscriptions</a>
             <a class="dropdown-item" href="/settings/user"><i class="fas fa-cogs"></i> Settings</a>
-            <a class="dropdown-item" href="https://wiki.openstreamingplatform.com/"><i class="fas fa-question-circle"></i> Help</a>
+            <a class="dropdown-item" href="https://open-streaming-platform.readthedocs.io/"><i class="fas fa-question-circle"></i> Help</a>
             <a class="dropdown-item" href="#" data-toggle="modal" data-target="#aboutModal"><i class="fas fa-info-circle"></i> About</a>
             <a class="dropdown-item" href="/logout"><i class="fas fa-sign-out-alt"></i> Log out</a>
           </div>
