@@ -1,6 +1,7 @@
 0.9.0
 ==============================================
 ** BREAKING CHANGE **: OSP-Core SMTP Settings have been removed from the DB and added to the config.py.  Check /opt/osp/conf/config.py.dist for SMTP Variables
+OSP General: The OSP Wiki has been moved to https://open-streaming-platform.readthedocs.io/
 OSP-Core: Adds Celery Task Queue and Celery Beat Task Scheduler
 OSP-Core: Adds New Theme Default Theme - Defaultv3
 OSP-Core: Adds Ability to Create Admin Level Custom Panels on Front Page
